kubernetes/node-project.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-project-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-project
  template:
    metadata:
      labels:
        app: node-project
    spec:
      containers:
      - name: node-project-kaiburr
        image: priteshvaviya11/node-project:latest
        ports:
        - name: nodejs-port
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: node-project
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30303
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: node-project
