kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hostname
spec:
  rules:
  - host: "node-project.kaiburr.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-project
            port:
              number: 80
